# cpp-hw-2

./: CMakeLists.txt  README.md
project/dynamic_task/include/: task.h
project/menu/include/: menu.h
project/menu/src/: menu.c
project/static_task/include/: task.h
project/static_task/src/: task.c
test/: main.cpp
